added small changes

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
             <p>Forest size<input name="forestSize" value="25" /></p>
             <p>Max number of trees<input name="treesMaxNumb" value="50" /></p>
             <p>Max number of bushes<input name="bushesMaxNumb" value="35" /></p>
-            <p>Tree's lifetime<input name="treeLifeDur" value="4" /></p>
-            <p>Bush's lifetime<input name="bushLifeDur" value="3" /></p>
-            <p>Wolf's speed (steps per move)<input name="wolfStepsPerMove" value="3" /></p>
-            <p>Rabbit's speed (steps per move)<input name="rabbitStepsPerMove" value="3" /></p>
+            <p><span class="tree"></span>Tree's lifetime<input name="treeLifeDur" value="4" /></p>
+            <p><span class="bush"></span>Bush's lifetime<input name="bushLifeDur" value="3" /></p>
+            <p><span class="wolf"></span>Wolf's speed (steps per move)<input name="wolfStepsPerMove" value="3" /></p>
+            <p><span class="rabbit"></span>Rabbit's speed (steps per move)<input name="rabbitStepsPerMove" value="3" /></p>
             <p>Move duration (s)<input name="moveTime" value="0.8" /></p>
             <p>Max number of moves<input name="moves" value="10" /></p>
-            <button id="startButton" type="button">PLAY</button>
+            <div class="tip">*Numbers on trees and bushes are their age</div>
+            <button id="startButton" type="button">WATCH THE GAME</button>
         </form>
     </div>
     <div class="col col-lg">
